# sugar-next

./: .gitignore  CLAUDE.md  Makefile  README.md
.claude/agents/: sugar-developer.md
.claude/skills/setup-sugar-workspace/: SKILL.md
.claude/skills/writing-skills/: SKILL.md
openspec/changes/background-visual-effects/: proposal.md  tasks.md
specbook/demos/: casilda_sugar_demo.py
specbook/docs/: base-standards.md  design-system.md  gtk-porting-standards.md  sugar-stack.md
specbook/plans/: gtk4-palette-positioning.md
sugar-next/: Containerfile  HIG.md  README.md  bootstrap.sh  pyproject.toml
sugar-next/data/: org.sugarlabs.SugarNext.mime.xml
sugar-next/dev/: hyprland.lua  run-container.sh  run-hyprland-nested.sh  run-wayfire.sh  wayfire.ini
sugar-next/examples/extensions/: journal.py  peer-chat.py
sugar-next/sugar_next/_wayland_wlr/wlr_foreign_toplevel_management_unstable_v1/: zwlr_foreign_toplevel_handle_v1.py
sugar-next/sugar_next/api/: hooks.py
sugar-next/sugar_next/bundles/: desktop_bundle.py
sugar-next/sugar_next/shell/: app_grid.py  desktop_grid.py  frame.py  home_view.py  layer_shell.py  main.py  palette.py  search_first.py  settings.py  settings_store.py  status_notifier.py  theme.py  toplevel_tracker.py
sugar-next/tests/: test_desktop_bundle.py  test_frame.py  test_home_view.py  test_hooks.py  test_journal_extension.py  test_layer_shell.py  test_peer_chat_extension.py  test_settings_panel.py  test_settings_store.py  test_status_notifier.py  test_theme.py  test_toplevel_tracker.py  test_xdg_compliance.py
(+75 files in other folders)
