[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sugar-next"
version = "0.1.0"
description = "Sugar Next — A Learning Shell for Everyday Computing"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "pygobject>=3.42",
]

[project.optional-dependencies]
# Real window tracking in the Frame (see shell/toplevel_tracker.py).
# Only takes effect on compositors offering zwlr_foreign_toplevel_manager_v1
# (wlroots-based: Wayfire, Sway, Hyprland). Optional because GNOME/Mutter
# and other compositors without this protocol still work fine without it —
# the shell falls back to on_app_close-based tracking.
wayland-toplevels = ["pywayland>=0.4"]

[project.scripts]
sugar-next = "sugar_next.shell.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sugar_next*"]
